@@ -1,3 +1,4 @@
+* Replace Arrow by Image
 * Remove Fast Tabbing option
 * Remove usage of focus_chain
 * Add shortcuts for switch and remove on One2Many
